--- a/index.html
+++ b/index.html
@@ -1,1 +1,129 @@
+<!DOCTYPE html>
+<html lang="en">
 
+
+<head>
+    <meta charset="UTF-8">
+    <title>Crystal Collector Game</title>
+    <!-- Added link to the jQuery Library -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Added a link to Bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">Crystals Collector!</h1>
+        </div>
+    </div>
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="panel panel-primary my-panel">
+
+                    <div id="myModal" class="modal">
+                            <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <p id="modalText"></p>
+                            </div>
+    
+                        </div>
+
+                    <div class="panel-body">
+                        <div class="col-lg-6 col-md-6 col-sm-6  col-xs-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h1 class="panel-title">Rules</h1>
+                                </div>
+                                <div class="panel-body">
+                                    <ul>
+                                        <li>You will be given a random number at the start of the game.</li>
+                                        <li>There are four crystals. By clicking on a crystal you will add a specific
+                                            amount of points to your total score.</li>
+                                        <li>You win the game by matching your total score to the random number, you lose
+                                            the game if your total score goes above the random number.</li>
+                                        <li>The value of each crystal is hidden from you until you click on it.</li>
+                                        <li>Each time when the game starts, the game will change the values of each
+                                            crystal.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <div class="panel panel-default">
+                                <div id=total class="panel-heading">
+                                    <h3 class="panel-title">Crystals</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <div class="row">
+                                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                                            <div class="thumbnail">
+                                                <img id="blue" src="assets/images/blue_crystal.png" alt="blue" width="100" height="100">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                                            <div class="thumbnail">
+                                                <img id="green" src="assets/images/green_crystal.png" alt="green" width="100" height="100">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                                            <div class="thumbnail">
+                                                <img id="red" src="assets/images/red_crystal.png" alt="red" width="100" height="100">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                                            <div class="thumbnail">
+                                                <img id="yellow" src="assets/images/yellow_crystal.png" alt="yellow" width="100" height="100">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-7">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Numbers</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <h4>Your Total Score is:
+                                        <span id="totalScore"></span>
+                                    </h4>
+                                    <h4>Number To Match:
+                                        <span id="numberToMatch"></span>
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-2 col-sm-6 col-xs-5">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Score</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <h4>Wins:
+                                        <span id="wins"></span>
+                                    </h4>
+                                    <h4>Losses:
+                                        <span id="losses"></span>
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="assets/javascript/game.js"></script>
+</body>
+
+</html>
