--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="panel panel-primary my-panel">
-                    
+
                     <div class="panel-body">
                         <div class="col-lg-6 col-md-6 col-sm-6  col-xs-12">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <h1 class="panel-title">Rules</h1>
+                                    <h1 class="panel-title">Rulez</h1>
                                 </div>
                                 <div class="panel-body">
                                     <ul>
@@ -58,22 +58,26 @@
                                     <div class="row">
                                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                                             <div class="thumbnail">
-                                                <img id="blue" src="assets/images/blue_crystal.png" alt="blue" width="100" height="100">
+                                                <img id="blue" src="assets/images/blue_crystal.png" alt="blue"
+                                                    width="100" height="100">
                                             </div>
                                         </div>
                                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                                             <div class="thumbnail">
-                                                <img id="green" src="assets/images/green_crystal.png" alt="green" width="100" height="100">
+                                                <img id="green" src="assets/images/green_crystal.png" alt="green"
+                                                    width="100" height="100">
                                             </div>
                                         </div>
                                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                                             <div class="thumbnail">
-                                                <img id="red" src="assets/images/red_crystal.png" alt="red" width="100" height="100">
+                                                <img id="red" src="assets/images/red_crystal.png" alt="red" width="100"
+                                                    height="100">
                                             </div>
                                         </div>
                                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                                             <div class="thumbnail">
-                                                <img id="yellow" src="assets/images/yellow_crystal.png" alt="yellow" width="100" height="100">
+                                                <img id="yellow" src="assets/images/yellow_crystal.png" alt="yellow"
+                                                    width="100" height="100">
                                             </div>
                                         </div>
                                     </div>
